--- a/final/css/trending.css
+++ b/final/css/trending.css
@@ -182,3 +182,37 @@
     line-height: 140%; /* 22.4px */
     flex: 1 0 0;
 }
+/*Reponsive cho table va mobile*/
+@media screen and (max-width: 991px) {
+    .trending-section {
+        padding: 40px 0;
+    }
+    .trending-headline {
+        width: 690px;
+    }
+    .headline-heading h3 {
+        font-size: 28px
+    }
+    .headline-subhead p {
+        font-size: 16px;
+    }
+    .trending-card-row {
+        width: 690px;
+        flex-wrap: wrap;
+    }
+    .trending-card {
+        width: 330px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 15px;
+    }
+}
+@media screen and (max-width: 767px) {
+    .trending-headline {
+        width: 315px;
+    }
+    .trending-card-row {
+        flex-direction: column;
+        width: 315px;
+    }
+}
