--- a/final/css/hero-section.css
+++ b/final/css/hero-section.css
@@ -100,6 +100,11 @@
     flex-direction: column;
     align-items: center;
     flex: 1 0 0;
+    transition: width 0.3s;
+    cursor: pointer;
+}
+.hero-image:hover {
+    transform: scale(1.09);
 }
 .hero-image-placeholder {
     flex: 1 0 0;
@@ -153,7 +158,7 @@
     line-height: 140%; /* 22.4px */
 }
 /*responsive cho table va mobile*/
-@media screen and (max-width: 991px) {
+@media only screen and (max-width: 991px) {
     .hero-section {
         padding: 80px 0;
     }
@@ -202,8 +207,12 @@
     }
 }
 @media screen and (max-width: 767px) {
+
     .hero-section {
         padding: 40px 0;
+        display: flex;
+        flex-direction: column;
+        position :relative;
     }
     .hero-frame {
         width: 315px;
@@ -222,7 +231,11 @@
     }
     .hero-image {
         height: 315px;
+        width:300px;
         flex-direction: column;
+        /*position: relative;*/
+        /*left: 70px;*/
+        /*top: 220px;*/
     }
     .hero-section-frame {
         height: 109px;
@@ -239,10 +252,13 @@
     .hero-button {
         height: 60px;
         padding: 0 50px;
+        width: 100%;
         justify-content: center;
         align-items: center;
         gap: 12px;
         align-self: stretch;
+        /*position: relative;*/
+        /*top:100px*/
     }
     .container-additional h5 {
         font-size: 22px;
@@ -252,4 +268,10 @@
         font-size: 16px;
         line-height: 140%;
     }
+    .hero-frame {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
 }
