--- a/final/css/top-rate.css
+++ b/final/css/top-rate.css
@@ -65,7 +65,6 @@
     gap: 30px;
 }
 .artist-card-element {
-
     display: flex;
     padding: 20px;
     flex-direction: column;
@@ -96,18 +95,20 @@
 .ranking {
     display: flex;
     width: 30px;
+    height: 30px;
     align-items: flex-start;
-    position: absolute;
-    left: 20px;
-    top: 18px;
-    border-radius: 20px;
+    border-radius: 50%;
     background: #2B2B2B;
-}
-.ranking p {
     position: absolute;
+    top: 10px;
     left: 10px;
+
+}
+.ranking a {
+    left:8px;
     top: 4px;
     color: #858584;
+    position: absolute;
 }
 @media screen and (max-width: 991px) {
     .top-rate {
@@ -150,5 +151,34 @@
     }
 }
 @media screen and (max-width: 767px) {
-
+    .top-rate {
+        position :relative;
+    }
+    .top-rate-head h2 {
+        font-size: 28px;
+    }
+    .top-rate-section {
+        width: 315px;
+    }
+    .artist-card-row {
+        flex-direction: column;
+        width: 315px;
+    }
+    .artist-card-element {
+        width: 100%;
+    }
+    .top-rate {
+        display: flex;
+        padding: 40px 195px;
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+        align-self: stretch;
+    }
+    .top-rate-section button {
+        width: 315px ;
+        position: absolute;
+        top: 1750px;
+        left: 50px;
+    }
 }
