--- a/final/css/trending.css
+++ b/final/css/trending.css
@@ -19,7 +19,7 @@
     gap: 10px;
     align-self: stretch;
 }
-.headline-heading h3 {
+.headline-heading h2 {
     color: #FFF;/
     font-family: "Work Sans";
     font-size: 38px;
@@ -215,4 +215,8 @@
         flex-direction: column;
         width: 315px;
     }
+    .headline-heading h2 {
+        font-size: 28px;
+    }
+
 }
