--- a/final/css/browse.css
+++ b/final/css/browse.css
@@ -167,8 +167,41 @@
     }
     .category-list-row {
         flex-direction: column;
+        display: flex;
+        height: 209px;
+        align-items: flex-start;
+        gap: 100px;
+        flex-shrink: 0;
+        align-self: stretch;
     }
     .category-list-item {
         height: 142px;
+    }
+    .category-item {
+        height: 142px;
+        align-self: stretch;
+    }
+    .category-placeholder {
+        width: 150px;
+        height: 142px;
+    }
+    .category-icon {
+        width: 80px;
+        height: 80px;
+        flex-shrink: 0;
+    }
+    .category-name {
+        height: 75px;
+        padding: 20px 20px 25px 20px;
+        align-items: flex-start;
+        gap: 25px;
+        background-color : #3B3B3B;
+        border-radius: 0 0 20px 20px;
+    }
+    .padding-bottom {
+        padding-bottom: 30.8px;
+    }
+    .category-name h5 {
+        font-size: 16px;
     }
 }
