--- a/final/css/nav.css
+++ b/final/css/nav.css
@@ -1,9 +1,13 @@
 nav {
+    position: sticky;
+    top: 0;
     display: flex;
     padding:20px 50px;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
+    background: #2b2b2b;
+    z-index: 100;
 }
 .logo {
     display: flex;
