--- a/final/css/browse.css
+++ b/final/css/browse.css
@@ -80,31 +80,31 @@
 }
 .category-background-2 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category2.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category2.png) lightgray 50% / cover no-repeat;
 }
 .category-background-3 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category3.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category3.png) lightgray 50% / cover no-repeat;
 }
 .category-background-4 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category4.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category4.png) lightgray 50% / cover no-repeat;
 }
 .category-background-5 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category5.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category5.png) lightgray 50% / cover no-repeat;
 }
 .category-background-6 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category6.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category6.png) lightgray 50% / cover no-repeat;
 }
 .category-background-7 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category7.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category7.png) lightgray 50% / cover no-repeat;
 }
 .category-background-8 {
     border-radius: 20px 20px 0 0;
-    background: url(/final/img/img-category/category8.png) lightgray 50% / cover no-repeat;
+    background: url(../img/img-category/category8.png) lightgray 50% / cover no-repeat;
 }
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .browse-categories {
