--- a/final/css/style.css
+++ b/final/css/style.css
@@ -1,7 +1,8 @@
 * {
-    padding: 0px;
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overscroll-behavior: none;
 }
 
 .primary-background-color {
