--- a/final/css/style.css
+++ b/final/css/style.css
@@ -142,6 +142,8 @@ button   {
     border: none;
     cursor: pointer;
     transition: transform 0.3s;
+    -webkit-user-select: none;
+    user-select: none;
 }
 input {
     outline: none;
