--- a/final/css/trending.css
+++ b/final/css/trending.css
@@ -53,7 +53,7 @@
 }
 .trending-card {
     display: flex;
-    width: 330px;
+    width: calc((100% - 60px)/3);
     flex-direction: column;
     align-items: flex-start;
     gap: 15px;
