--- a/final/css/discover.css
+++ b/final/css/discover.css
@@ -1,6 +1,6 @@
 .discover {
     display: flex;
-    padding: 80px 114px;
+    padding: 80px 0;
     flex-direction: column;
     align-items: center;
     gap: 60px;
@@ -35,6 +35,9 @@
     align-items: flex-start;
     gap: 30px;
     align-self: stretch;
+}
+.discover-button {
+    display: none;
 }
 .ntf-card {
     display: flex;
@@ -122,7 +125,6 @@
     }
     .ntf-card-row {
         width: 690px;
-        gap: 30px;
         flex-wrap: wrap;
     }
     .ntf-card {
@@ -131,5 +133,32 @@
     }
     .ntf-background {
         height: 295px;
+    }
+}
+@media screen and (max-width: 767px) {
+    .discover {
+        padding: 40px 0 60px 0;
+        flex-direction: column;
+    }
+    .discover-headline {
+        width:315px;
+    }
+    .headline-text h2 {
+        font-size: 28px;
+    }
+    .headline-text p {
+        font-size: 16px;
+    }
+    .discover-headline button {
+        display: none;
+    }
+    .ntf-card-row {
+        width: 315px;
+        flex-wrap: wrap;
+    }
+    .discover-button {
+        display: flex;
+        width:315px;
+        height: 50px;
     }
 }
