--- a/final/css/footer.css
+++ b/final/css/footer.css
@@ -73,7 +73,7 @@ form button {
     gap: 20px;
 }
 .footer-bottom hr {
-    width: 1049.414px;
+    width: 100%;
     height: 1px;
     background: #858584;
 }
@@ -110,4 +110,27 @@ form button {
         align-items: flex-start;
         gap: 20px;
     }
+}
+@media screen and (max-width: 767px) {
+    .footer {
+        padding: 40px 0;
+    }
+    .footer-container {
+        width: 315px;
+    }
+    .footer-bottom {
+        width: 315px;
+    }
+    .footer-form-subscribe input {
+        height: 46px;
+        padding: 16px 20px;
+        width: 300px;
+    }
+    .footer-form-subscribe button {
+        position:relative;
+        left:0 ;
+        height: 50px;
+        width: 300px;
+    }
+
 }
