--- a/final/css/sub-widget.css
+++ b/final/css/sub-widget.css
@@ -12,6 +12,7 @@
     width: 1050px;
     padding: 60px;
     align-items: center;
+    justify-content: center;
     gap: 80px;
     background: #3B3B3B;
     border-radius: 20px;
@@ -20,7 +21,7 @@
     height: 310px;
     flex: 1 0 0;
     border-radius: 20px;
-    background: url(../img/img-sub-widget/Photo.png) lightgray 50% / cover no-repeat;
+    /*background: url(../img/img-sub-widget/Photo.png) lightgray 50% / cover no-repeat;*/
 }
 .sub-widget-heading {
     display: flex;
@@ -76,8 +77,11 @@ form button {
         padding: 40px 30px;
         gap: 30px;
     }
+    .background-sub-widget img {
+        width: 100%;
+        height: 310px;
+    }
     .sub-widget-heading {
-        gap: 40px;
         flex: 1 0 0;
     }
     .sub-widget-heading h4 {
@@ -109,4 +113,32 @@ form button {
     .sub-widget-heading-text h2 {
         font-size: 28px;
     }
+}
+@media screen and (max-width: 767px) {
+    .sub-widget {
+        padding: 40px 0;
+        flex-direction: column
+    }
+    .sub-widget-form {
+        width: 315px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #2b2b2b;
+        gap: 80px;
+    }
+    .background-sub-widget img {
+        height: 315px;
+        width: 315px;
+    }
+    .sub-widget-heading {
+       width:315px ;
+    }
+    .sub-widget-heading h2 {
+        font-size: 28px;
+    }
+    .sub-widget-heading p {
+        font-size: 16px;
+    }
+
 }
