--- a/final/css/sub-widget.css
+++ b/final/css/sub-widget.css
@@ -40,7 +40,7 @@ form input {
     width: 230px;
     display: flex;
     height: 60px;
-    padding: 16px 0 16px 20px;
+    padding: 16px 20% 16px 20px;
     align-items: center;
     gap: 12px;
     align-self: stretch;
