--- a/final/css/footer.css
+++ b/final/css/footer.css
@@ -7,6 +7,11 @@
     align-self: stretch;
     background:#3B3B3B;
 }
+.footer-logo {
+    display: flex;
+    flex-direction: row;
+}
+
 .footer-container {
     display: flex;
     justify-content: space-between;
@@ -93,7 +98,7 @@ form button {
 .pages-footer a:hover {
     color: #A259FF;
 }
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1024px) {
     .footer {
         padding: 40px 195px;
         gap: 49px;
