--- a/final/css/discover.css
+++ b/final/css/discover.css
@@ -137,7 +137,7 @@
 }
 @media screen and (max-width: 767px) {
     .discover {
-        padding: 40px 0 60px 0;
+        padding: 40px 30px 60px 30px;
         flex-direction: column;
     }
     .discover-headline {
