--- a/final/css/hero-section.css
+++ b/final/css/hero-section.css
@@ -214,7 +214,7 @@
 @media screen and (max-width: 767px) {
 
     .hero-section {
-        padding: 40px 0;
+        padding: 40px 30px;
         display: flex;
         flex-direction: column;
     }
