--- a/final/css/sub-widget.css
+++ b/final/css/sub-widget.css
@@ -116,7 +116,7 @@ form button {
 }
 @media screen and (max-width: 767px) {
     .sub-widget {
-        padding: 40px 0;
+        padding: 40px 30px;
         flex-direction: column
     }
     .sub-widget-form {
