--- a/final/css/top-rate.css
+++ b/final/css/top-rate.css
@@ -172,7 +172,7 @@
     }
     .top-rate {
         display: flex;
-        padding: 40px 0;
+        padding: 40px 30px;
         flex-direction: column;
         align-items: center;
         gap: 40px;
