--- a/btvn-day21/style.css
+++ b/btvn-day21/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 .container {
-    width: 600px;
+    width: 800px;
     margin: 20px auto;
 }
 table {
@@ -26,7 +26,7 @@ tr {
 td {
     padding: 10px;
 }
-tbody td:nth-child(4) {
+tbody td:nth-child(5) {
     text-align: right;
 }
 .text-align-center {
@@ -105,6 +105,11 @@ span:nth-child(2) {
     gap:12px
 }
 .dialog-input input {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+}
+.dialog select {
     width: 100%;
     padding: 10px;
     font-size: 16px;
