--- a/btvn-day29/style.css
+++ b/btvn-day29/style.css
@@ -26,7 +26,8 @@
     cursor: pointer;
 }
 img {
-    width: 60%;
+    object-fit: contain;
+    width: 100%;
     height: 200px;
     align-self: center;
 }
